<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		frame_498
	 *	@date 		Friday 21st of April 2023 12:02:06 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/frame_498" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >


			<RelativeLayout
				android:id="@+id/page_frame_498_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="-10dp"
				android:layout_marginTop="0dp">

				<View
					android:id="@+id/_bg__frame_498_ek2"
					android:layout_width="match_parent"
					android:layout_height="844dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__frame_498_ek2_shape" />


				<RelativeLayout
					android:id="@+id/your_orders"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="20dp">


					<RelativeLayout
						android:id="@+id/frame_169"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="16dp"
						android:layout_marginTop="68dp">

						<ImageView
							android:id="@+id/vector"
							android:layout_width="12dp"
							android:layout_height="12dp"
							android:layout_marginStart="6dp"
							android:layout_marginTop="6dp"
							android:contentDescription="vector"
							android:src="@drawable/vector" />

						<TextView
							android:id="@+id/your_orders_ek1"
							android:layout_width="126dp"
							android:layout_height="38dp"
							android:layout_gravity="center_horizontal|center"
							android:layout_marginLeft="106dp"
							android:layout_marginTop="0dp"
							android:gravity="center"
							android:text="@string/your_orders_ek1_string"
							android:textColor="@color/your_orders_ek1_color"
							android:textSize="20sp"
							android:textStyle="bold" />

					</RelativeLayout>


					<LinearLayout
						android:id="@+id/frame_150"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="16dp"
						android:layout_marginTop="132dp">


						<RelativeLayout
							android:id="@+id/frame_149"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp">


							<ImageView
								android:id="@+id/__img_frame_11"
								android:layout_width="24dp"
								android:layout_height="24dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:contentDescription="__img_frame_11"
								android:src="@drawable/__img_frame_11" />

							<RelativeLayout
								android:id="@+id/frame_148"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="37dp"
								android:layout_marginTop="0dp">


									<TextView
										android:id="@+id/cookie_sandwich"
										android:layout_width="145dp"
										android:layout_height="30dp"
										android:layout_gravity="center_horizontal|center"
										android:layout_marginLeft="0dp"
										android:layout_marginTop="2.5dp"
										android:gravity="center"
										android:text="@string/cookie_sandwich_string"
										android:textColor="@color/your_orders_ek1_color"
										android:textSize="16sp"
										android:textStyle="bold" />

									<TextView
										android:id="@+id/price"
										android:layout_width="83dp"
										android:layout_height="35dp"
										android:layout_marginLeft="225dp"
										android:layout_marginTop="0dp"
										android:text="12.99 PLN"
										android:textColor="@color/kes_345_color"
										android:textSize="16sp"
										android:textStyle="bold" />

							</RelativeLayout>

						</RelativeLayout>




						<RelativeLayout
							android:id="@+id/frame_1491"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="-345dp"
							android:layout_marginTop="36dp">


							<ImageView
								android:id="@+id/__img_frame_111"
								android:layout_width="24dp"
								android:layout_height="24dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:contentDescription="__img_frame_11"
								android:src="@drawable/__img_frame_11" />

							<RelativeLayout
								android:id="@+id/frame_1481"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="37dp"
								android:layout_marginTop="0dp">


								<TextView
									android:id="@+id/cookie_sandwich1"
									android:layout_width="145dp"
									android:layout_height="30dp"
									android:layout_gravity="center_horizontal|center"
									android:layout_marginLeft="0dp"
									android:layout_marginTop="2.5dp"
									android:gravity="center"
									android:text="@string/cookie_sandwich_string"
									android:textColor="@color/your_orders_ek1_color"
									android:textSize="16sp"
									android:textStyle="bold" />

								<TextView
									android:id="@+id/price1"
									android:layout_width="83dp"
									android:layout_height="35dp"
									android:layout_marginLeft="225dp"
									android:layout_marginTop="0dp"
									android:text="12.99 PLN"
									android:textColor="@color/kes_345_color"
									android:textSize="16sp"
									android:textStyle="bold" />

							</RelativeLayout>

						</RelativeLayout>




						<RelativeLayout
							android:id="@+id/frame_14911"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="-346dp"
							android:layout_marginTop="71dp">


							<ImageView
								android:id="@+id/__img_frame_1111"
								android:layout_width="24dp"
								android:layout_height="24dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:contentDescription="__img_frame_11"
								android:src="@drawable/__img_frame_11" />

							<RelativeLayout
								android:id="@+id/frame_14811"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="37dp"
								android:layout_marginTop="0dp">


								<TextView
									android:id="@+id/cookie_sandwich11"
									android:layout_width="145dp"
									android:layout_height="30dp"
									android:layout_gravity="center_horizontal|center"
									android:layout_marginLeft="0dp"
									android:layout_marginTop="2.5dp"
									android:gravity="center"
									android:text="@string/cookie_sandwich_string"
									android:textColor="@color/your_orders_ek1_color"
									android:textSize="16sp"
									android:textStyle="bold" />

								<TextView
									android:id="@+id/price11"
									android:layout_width="83dp"
									android:layout_height="35dp"
									android:layout_marginLeft="225dp"
									android:layout_marginTop="0dp"
									android:text="12.99 PLN"
									android:textColor="@color/kes_345_color"
									android:textSize="16sp"
									android:textStyle="bold" />

							</RelativeLayout>

						</RelativeLayout>



						<RelativeLayout
							android:id="@+id/frame_149112"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="-345dp"
							android:layout_marginTop="106dp">


							<ImageView
								android:id="@+id/__img_frame_11112"
								android:layout_width="24dp"
								android:layout_height="24dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:contentDescription="__img_frame_11"
								android:src="@drawable/__img_frame_11" />

							<RelativeLayout
								android:id="@+id/frame_148112"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="37dp"
								android:layout_marginTop="0dp">


								<TextView
									android:id="@+id/cookie_sandwich112"
									android:layout_width="145dp"
									android:layout_height="30dp"
									android:layout_gravity="center_horizontal|center"
									android:layout_marginLeft="0dp"
									android:layout_marginTop="2.5dp"
									android:gravity="center"
									android:text="@string/cookie_sandwich_string"
									android:textColor="@color/your_orders_ek1_color"
									android:textSize="16sp"
									android:textStyle="bold" />

								<TextView
									android:id="@+id/price112"
									android:layout_width="83dp"
									android:layout_height="35dp"
									android:layout_marginLeft="225dp"
									android:layout_marginTop="0dp"
									android:text="12.99 PLN"
									android:textColor="@color/kes_345_color"
									android:textSize="16sp"
									android:textStyle="bold" />

							</RelativeLayout>

						</RelativeLayout>

					</LinearLayout>





					<RelativeLayout
						android:id="@+id/frame_159"
						android:layout_width="349dp"
						android:layout_height="wrap_content"
						android:layout_marginStart="16dp"
						android:layout_marginTop="390dp">


						<RelativeLayout
							android:id="@+id/frame_158"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp">


							<RelativeLayout
								android:id="@+id/frame_156"
								android:layout_width="159dp"
								android:layout_height="42dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp">

								<EditText
									android:id="@+id/add_promo_code"
									android:layout_width="140dp"
									android:layout_height="match_parent"
									android:layout_marginLeft="12dp"
									android:hint="Add promo code"
									android:textColor="@color/black"
									android:textColorHint="@color/add_promo_code_color"
									android:textSize="16sp"
									tools:ignore="TouchTargetSizeCheck" />

							</RelativeLayout>

							<Button
								android:id="@+id/btn_apply"
								android:layout_width="89dp"
								android:layout_height="43dp"
								android:layout_marginStart="239dp"
								android:layout_marginTop="0dp"
								android:background="@drawable/__img_frame_157"
								android:contentDescription="__img_frame_157"
								tools:ignore="TouchTargetSizeCheck" />

						</RelativeLayout>

						<RelativeLayout
							android:id="@+id/frame_155"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="0dp"
							android:layout_marginTop="67dp">


							<RelativeLayout
								android:id="@+id/frame_152"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="0dp"
								android:layout_marginTop="0dp">

								<TextView
									android:id="@+id/shortbread__chocolat"
									android:layout_width="82dp"
									android:layout_height="35dp"
									android:layout_marginLeft="0dp"
									android:layout_marginTop="0dp"
									android:alpha="0.64"
									android:text="@string/shortbread__chocolat_string"
									android:textColor="@color/shortbread__chocolat_color"
									android:textSize="16sp" />

								<TextView
									android:id="@+id/shortbread__chocolat_ek1"
									android:layout_width="87dp"
									android:layout_height="35dp"
									android:layout_marginLeft="262dp"
									android:layout_marginTop="0dp"
									android:alpha="0.64"
									android:text="12.99 PLN"
									android:textColor="@color/shortbread__chocolat_color"
									android:textSize="16sp" />

							</RelativeLayout>


							<RelativeLayout
								android:id="@+id/frame_155_ek1"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="0dp"
								android:layout_marginTop="36dp">

								<TextView
									android:id="@+id/shortbread__chocolat_ek2"
									android:layout_width="69dp"
									android:layout_height="35dp"
									android:layout_marginLeft="0dp"
									android:layout_marginTop="0dp"
									android:alpha="0.64"
									android:text="@string/shortbread__chocolat_ek2_string"
									android:textColor="@color/shortbread__chocolat_color"
									android:textSize="16sp" />

								<TextView
									android:id="@+id/shortbread__chocolat_ek3"
									android:layout_width="87dp"
									android:layout_height="35dp"
									android:layout_marginLeft="262dp"
									android:layout_marginTop="0dp"
									android:alpha="0.64"
									android:text="-0 PLN"
									android:textColor="@color/shortbread__chocolat_color"
									android:textSize="16sp" />

							</RelativeLayout>


							<RelativeLayout
								android:id="@+id/frame_154"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginTop="72dp">

								<TextView
									android:id="@+id/kes_1_045"
									android:layout_width="87dp"
									android:layout_height="30dp"
									android:layout_gravity="center_horizontal|center"
									android:layout_marginLeft="251dp"
									android:layout_marginTop="0dp"
									android:gravity="center"
									android:text="12.99 PLN"
									android:textColor="@color/your_orders_ek1_color"
									android:textSize="16sp" />

								<TextView
									android:id="@+id/total"
									android:layout_width="50dp"
									android:layout_height="30dp"
									android:layout_gravity="center_horizontal|center"
									android:layout_marginLeft="0dp"
									android:layout_marginTop="0dp"
									android:gravity="center"
									android:text="@string/total_string"
									android:textColor="@color/your_orders_ek1_color"
									android:textSize="16sp" />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>

					<Button
						android:id="@+id/btn_add_items"
						android:layout_width="328dp"
						android:layout_height="48dp"
						android:layout_marginStart="20dp"
						android:layout_marginTop="580dp"
						android:background="@drawable/__img_frame_156_ek1"
						android:contentDescription="__img_frame_156_ek1" />

					<Button
						android:id="@+id/btn_payment"
						android:layout_width="328dp"
						android:layout_height="45dp"
						android:layout_marginStart="20dp"
						android:layout_marginTop="640dp"
						android:background="@drawable/__img_frame_5"
						android:contentDescription="__img_frame_5"
						tools:ignore="TouchTargetSizeCheck" />


					<RelativeLayout
						android:id="@+id/frame_84"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="13dp"
						android:layout_marginTop="680dp">

						<Button
							android:id="@+id/btn_home"
							android:layout_width="39dp"
							android:layout_height="49dp"
							android:layout_marginStart="16dp"
							android:layout_marginTop="24dp"
							android:background="@drawable/__img_frame_80"
							tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
							android:onClick="change_Activity"/>

						<Button
							android:id="@+id/btn_search"
							android:layout_width="45dp"
							android:layout_height="49dp"
							android:layout_marginStart="102.67dp"
							android:layout_marginTop="24dp"
							android:background="@drawable/__img_frame_81"
							android:contentDescription="__img_frame_81"
							tools:ignore="TouchTargetSizeCheck"
							android:onClick="change_Activity"/>

						<Button
							android:id="@+id/btn_cart"
							android:layout_width="48dp"
							android:layout_height="49dp"
							android:layout_marginStart="195.33dp"
							android:layout_marginTop="24dp"
							android:background="@drawable/__img_frame_82"
							android:contentDescription="__img_frame_82"
							android:onClick="change_Activity"/>

						<Button
							android:id="@+id/btn_account"
							android:layout_width="55dp"
							android:layout_height="49dp"
							android:layout_marginStart="289dp"
							android:layout_marginTop="24dp"
							android:background="@drawable/__img_frame_83"
							android:contentDescription="__img_frame_83"
							android:onClick="change_Activity"/>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>